Use GNUInstallDirs to determine install locations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,9 +13,9 @@ add_library(c-util ${C_UTIL_SOURCES})
 # Installation (if needed)
 #
 
-install(FILES ${C_UTIL_HEADERS} DESTINATION include/c-util)
+install(FILES ${C_UTIL_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/c-util)
 
 install(TARGETS c-util
   EXPORT c-util
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib)
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
